@@ -17,8 +17,7 @@
 		<format property="timestamp" pattern="yyMMddHHmm" />
 	</tstamp>
 
-	<!-- <property name="version" value="DEV-${timestamp}" /> -->
-	<property name="version" value="0.5.6" />
+	<property name="version" value="DEV-${timestamp}" />
 
 	<target name="build" depends="compile-all" />
 
