@@ -2,6 +2,7 @@
 * Moved to new UPnP library for router auto-config - much better
 * No longer uses separate homedir for dev versions (can still override with RBNB_HOME env variable)
 * Shows up/download speeds in gui status panel
+* Starts more downloads if existing ones are idle
 
 0.5.6
 
